Update 6.5.0 & 5.15.2 to Dev Test 2

--- a/App/AppInfo/Launcher/QtLinguistPortable.ini
+++ b/App/AppInfo/Launcher/QtLinguistPortable.ini
@@ -4,12 +4,10 @@ ProgramExecutable64=linguist64\linguist.exe
 WorkingDirectory=%PAL:DataDir%
 DirectoryMoveOK=yes
 SupportsUNC=yes
+CleanTemp=false
 
 [Activate]
 Registry=true
-
-[DirectoriesCleanupIfEmpty]
-1=%PAL:DataDir%\Temp
 
 [QtKeysCleanup]
 1=FileDialog
@@ -17,9 +15,7 @@ Registry=true
 [RegistryKeys]
 QtLinguist=HKCU\Software\QtProject\Linguist
 -=HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.po
+-=HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.qm
 -=HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.qph
 -=HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.ts
 -=HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts\.xlf
-
-[RegistryCleanupIfEmpty]
-1=HKCU\Software\QtProject
